completed todo list

--- a/TodoList/assignment.html
+++ b/TodoList/assignment.html
@@ -7,12 +7,12 @@
     <title>Week 4 ~ Day 2 ~ Activity: TODO List</title>
     <link rel="stylesheet" href="css/assignment.css"></link>
 </head>
-<body id="bodyy">
+<body>
 
-    <div>
+    <div id="header">
         <label>Enter Task:</label>
         <input type="text" id="taskTextBox"/>
-        <button id="btnAddTask">ADD</button>
+        <button id="btnAddTask">Add</button>
     </div>
 
     <div>
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div>
+    <div class="container">
         <h3>Completed Tasks</h3>
         <div id="taskListCompleted">
             <!-- completed tasks go in here -->
